2011-12-15  Jakub Jelinek  <jakub@redhat.com>

	PR c/51360
	* semantics.c (finish_omp_clauses): For OMP_CLAUSE_NUM_THREADS_EXPR
	and OMP_CLAUSE_SCHEDULE_CHUNK_EXPR call mark_rvalue_use.

2012-01-19  Kai Tietz  <ktietz@redhat.com>

	PR c++/51344
	* decl2.c (save_template_attributes): Use merge_attributes
	instead of chaining up via TREE_CHAIN.

2011-10-19  Jason Merrill  <jason@redhat.com>

	PR c++/50793
	* tree.c (bot_manip): Propagate AGGR_INIT_ZERO_FIRST.

2011-10-13  Jason Merrill  <jason@redhat.com>

	PR c++/50618
	* init.c (expand_aggr_init_1): Don't zero-initialize virtual
	bases of a base subobject.

	Backported from 4.6 branch
	2011-03-11  Jakub Jelinek  <jakub@redhat.com>

	PR c++/48035
	* init.c (build_zero_init_1): Extracted from build_zero_init.
	Add FIELD_SIZE argument, if non-NULL and field bit_position
	as not smaller than that, don't add that field's initializer.
	Pass DECL_SIZE as last argument to build_zero_init_1
	for DECL_FIELD_IS_BASE fields.
	(build_zero_init): Use build_zero_init_1.

2011-07-01  Jakub Jelinek  <jakub@redhat.com>

	* Make-lang.in (cp/decl.o): Depend on pointer-set.h.
	(cp/name-lookup.o): Likewise.

2011-06-30  Jason Merrill  <jason@redhat.com>

	PR c++/48481
	* name-lookup.c (struct arg_lookup): Add fn_set.
	(add_function): Check it.
	(lookup_arg_dependent_1): Initialize it.

2011-04-07  Jason Merrill  <jason@redhat.com>

	PR c++/48481
    	* call.c (build_user_type_conversion_1): Use lookup_fnfields_slot.
    	* search.c (lookup_fnfields_slot): New.
    	* cp-tree.h: Declare it.

	PR c++/48481
	* cp-tree.h (OVL_ARG_DEPENDENT): New.
	* name-lookup.c (add_function): Set it.
	* semantics.c (finish_call_expr): Free OVERLOADs if it's set.

	PR c++/48481
    	* call.c (ggc_free_list): New.
    	(build_user_type_conversion_1): Free args on failure.

2011-08-23  Siddhesh Poyarekar  <siddhesh.poyarekar@gmail.com>

	PR c++/50055
	* except.c (begin_eh_spec_block): Build EH_SPEC block on the
	same line as the function.
