@@ -1,3 +1,8 @@
+2012-02-14  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/52247
+	* g++.dg/template/asmgoto1.C: New test.
+
 2012-01-05  Jakub Jelinek  <jakub@redhat.com>
 
 	PR rtl-optimization/51767
